--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color:white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
+    float: center;
 }
 
 #container {
@@ -9,11 +10,12 @@ body {
     padding: 15px 10px 30px 10px;
     box-shadow: 2px 2px 2px #aaaaaa;
     border-radius: 7px;
-    margin: 10px;
+    margin: 10% auto;
+    width: 260px;
 }
 
-div {
-    float: left;
+#buttonDiv.clear {
+    clear: both;
 }
 
 #screen {
@@ -22,23 +24,27 @@ div {
     background-color: gray;
     border-radius: 3px;
     text-align: right;
-    font-size: 30px;
+    font-size: 27px;
     padding: 5px;
     border:  #10150F 1px solid;
+    margin: 0px 0px 10px 0px;
 }
+
 .solar {
     background-color:darkslategray;
     border: #10150F 1px solid;
-    height: 27px;
-    width: 20px;
+    height: 35px;
+    width: 28px;
     margin: 3px 0px;
+    float: left;
 }
 
 button{
+    float: center;
     height: 35px;
-    width: 45px;
-    padding: 5px 5px 5px 5px;
-    margin: 4px 2px; 
+    width: 53px;
+    padding: 1px;
+    margin: 2px 4px; 
     border-radius: 5px;
     background-color: red;
     color: white;
@@ -51,10 +57,6 @@ button{
     color: darkblue;
 }
 
-#clear{
-    font-size: 12px;
-    float: left;
-}
 
 #decimal{
     background-color: white;
